gitea/gitea.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: gitea
